# SkillScale

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  README_CN.md  README_ES.md  README_FR.md  README_JP.md  README_REDPANDA.md  README_TW.md  ZeroMQ Skill Agent Architecture Specification.md  arch.md  arch_cn.md  build.sh  build_with_redpanda.sh  debug_mcp.py  docker-compose.yml  launch_all.sh  launch_ui.sh  package.json  patch_gateway.py  pyproject.toml  requirements.txt  run.sh  run_all.sh  run_all_with_redpanda.sh  run_e2e.sh  run_me.sh  run_with_redpanda.sh  setup.sh  stress_test_e2e.py  test_docker_e2e.py  test_e2e_live.py  test_input.json
agent/: docker_publish.py  main.py  main_kafka.py  requirements.txt
deprecated/: build_with_redpanda.sh  docker-compose-redpanda.yml  docker-compose-rust.yml
docker/: Dockerfile.agent  Dockerfile.proxy  Dockerfile.redpanda  Dockerfile.rust  Dockerfile.skill-server  Dockerfile.skill-server-py  entrypoint-skill-server.sh
examples/: demo_a2a_client.py  demo_mcp_client.py  direct_client.py  langchain_agent.py  langgraph_agent.py
gateway/: demo_a2a_client.py  demo_mcp_client.py  transparent_layer.py
k8s/: 00-namespace.yaml  01-proxy.yaml  02-crd-skilltopic.yaml  03-skilltopic-instances.yaml  04-keda-scaledobjects.yaml  05-agent.yaml  06-skill-servers.yaml
legacy_cpp/docker/: Dockerfile.skill-server  entrypoint-skill-server.sh
legacy_cpp/gateway/: context_server.py  mcp_client_bridge.py  transparent_layer.py
legacy_cpp/proxy/: CMakeLists.txt  main.cpp
legacy_cpp/skill-server/: CMakeLists.txt  kafka_service.cpp  kafka_service.h  main.cpp  server_config.h  skill_executor.cpp  skill_executor.h  skill_loader.cpp  skill_loader.h
proxy/: main.cpp
scripts/: llm_match.py  opencode-exec  openskills  openskills.legacy  test_e2e_sync.py
scripts/prompts/: skill_match.txt
skill-server/: CMakeLists.txt  main.cpp  message_handler.cpp  message_handler.h  skill_executor.cpp  skill_executor.h  skill_loader.cpp  skill_loader.h
skill-server-py/: openskills.py  requirements.txt  server.py
skills/: llm_utils.py
skills/code-analysis/: AGENTS.md
skills/code-analysis/code-complexity/: SKILL.md
skills/code-analysis/code-complexity/scripts/: run.py
skills/code-analysis/dead-code-detector/: SKILL.md
skills/code-analysis/dead-code-detector/scripts/: run.py
skills/data-processing/: AGENTS.md
skills/data-processing/csv-analyzer/: SKILL.md
skills/data-processing/csv-analyzer/scripts/: run.py
skills/data-processing/text-summarizer/: SKILL.md
skills/data-processing/text-summarizer/scripts/: run.py
skillscale/: __init__.py  client.py  discovery.py  kafka.py  server_kafka.py
skillscale-rs/: Cargo.toml
skillscale-rs/common/: Cargo.toml
skillscale-rs/common/src/: lib.rs
skillscale-rs/gateway/: Cargo.toml
skillscale-rs/gateway/src/: main.rs  mcp_server.rs  skill_discovery.rs
skillscale-rs/mcp-server/: Cargo.toml
skillscale-rs/mcp-server/src/: main.rs
skillscale-rs/skill-server/: Cargo.toml
skillscale-rs/skill-server/src/: main.rs
skillscale/adapters/: __init__.py  crewai.py  langchain.py  langgraph.py
skillscale/gateway/: mcp_server.py
tests/: conftest.py  pytest.ini  requirements.txt  test_01_proxy.py  test_02_agent_e2e.py  test_03_skills.py  test_04_fault_tolerance.py
ui/: requirements.txt
ui/chat/: server.py
ui/chat/frontend/: index.html  vite.config.ts
ui/chat/frontend/src/: App.css  App.tsx
ui/management/: server.py
ui/management/frontend/: index.html  package-lock.json  vite.config.ts
ui/management/frontend/src/: App.css  App.tsx
