[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
rdkafka = { version = "0.36", features = ["cmake-build"] }
common = { path = "../common" }
chrono = "0.4.44"
uuid = { version = "1.0", features = ["v4", "serde"] }
clap = { version = "4.4", features = ["derive"] }
futures = "0.3"
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", features = ["server", "macros", "transport-io", "schemars"] }
async-trait = "0.1.89"
# schemars = "1.0"

