[package]
name = "skill-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
rdkafka = { version = "0.36", features = ["cmake-build"] }
walkdir = "2.5"
anyhow = "1.0"
common = { path = "../common" }

